<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Radio Gaga</string>
    <string name="add_station">Add Station</string>
    <string name="edit_station">Edit Station</string>
    <string name="no_stations">No stations yet.\nTap + to add a radio station.</string>
    <string name="sort_by">Sort By</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="share_station">Share Station</string>
    <string name="import_m3u">Import M3U</string>
    <string name="export_m3u">Export M3U</string>
    <string name="splash_subtitle">Someone still loves you</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="auto_check_updates">Auto-check on launch</string>
    <string name="auto_check_updates_summary">Check GitHub Releases once a day</string>
    <string name="update_github_owner" translatable="false">alkevintan</string>
    <string name="update_github_repo" translatable="false">radio-gaga</string>

    <string name="pair_device">Pair device</string>
    <string name="pair_show_qr">Show QR</string>
    <string name="pair_scan_qr">Scan QR</string>
    <string name="pair_unpair">Unpair</string>
    <string name="paired_with">Paired with %1$s</string>
    <string name="not_paired">Not paired</string>
    <string name="remote_mode_title">Remote Control</string>
</resources>